kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: web-app
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
